--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>hello ki haal hiddh ey</h1>
+    <h1>hello ki haal hiddh gjgjhg ey</h1>
     <script src="./app.js"></script>
 
 </body>
